# banking.app.skypro

./: .flake8  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
