[project]
name = "banking-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Afanasiev",email = "gecktor.86@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "banking"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
