[project]
name = "banking-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Afanasiev",email = "gecktor.86@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "banking"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
exclude = 'venv'

[tool.black]
# Максимальная длина строки
line-length = 119
skip-string-normalization = true
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.git
    | \.venv
    | dist
  )
)
'''

[tool.isort]
line_length = 119
